Added projects page

--- a/projects.html
+++ b/projects.html
@@ -27,11 +27,87 @@
         </div>
       </nav>
 
-      <div class="row main-body">
+      <!-- Main Body -->
+
+      <div class="main-body">
+
         <h1> My projects </h1>
+        <div class="project row">
+          <div class="col-sm-6">
+            <iframe class ="project-pic" width="450" height="250" src="https://www.youtube.com/embed/kNekdV2yj9o?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Forest Void  </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6">
+            <iframe class="project-pic" width="450" height="250" src="https://www.youtube.com/embed/hY0L1jHRs_Q?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Cotswold Water Park  </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6">
+            <img class="project-pic" src="/images/scotland_yard.png"/>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Scotland Yard </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6">
+            <img class="project-pic" src="/images/website.png"/>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Earthly Recipes </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6">
+            <img class="project-pic" src="/images/rasteriser.png"/>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Graphics Engine - rasteriser </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6">
+            <img class="project-pic" src="/images/dart.jpg"/>
+          </div>
+          <div class="project-text col-sm-6">
+            <h2> Dartboard detector </h2>
+            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+            Just click “Edit Text” or double click me and you can start adding your own
+            content and make changes to the font.</p>
+          </div>
+        </div>
+
       </div>
 
     </div>
+
 
     <!-- Footer -->
 
@@ -60,7 +136,10 @@
             <div class="footer-text">
               <p>Follow me</p>
               <a href="https://www.linkedin.com/in/aatina-punjabi-70408710a/">
-                <i class="li-icon fab fa-linkedin"></i>
+                <i class="contact-icon fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/aatina">
+                <i class="contact-icon fab fa-github"></i>
               </a>
             </div>
           </div>
@@ -68,6 +147,7 @@
         </div>
       </div>
     </footer>
+
 
     <!-- Scripts -->
 
