--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <h1 class="col-sm-12"> About me </h2>
 
           <div class="home-circles col-sm-12">
-            <div class="circle-link projects"><span>Projects</span></div>
-            <div class="circle-link resume"><span>Resume</span></div>
-            <div class="circle-link contact"><span>Contact me</span></div>
+            <div class="circle-link projects"><a href="/projects.html">Projects</a></div>
+            <div class="circle-link resume"><a href="/">Resume</a></div>
+            <div class="circle-link contact"><a href="/">Contact me</a></div>
           </div>
 
           <div class="main-text col-sm-12">
@@ -82,7 +82,10 @@
             <div class="footer-text">
               <p>Follow me</p>
               <a href="https://www.linkedin.com/in/aatina-punjabi-70408710a/">
-                <i class="li-icon fab fa-linkedin"></i>
+                <i class="contact-icon fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/aatina">
+                <i class="contact-icon fab fa-github"></i>
               </a>
             </div>
           </div>
