Added resume page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/projects.html">Projects</a>
-            <a class="nav-item nav-link" href="/">Resume</a>
+            <a class="nav-item nav-link" href="/resume.html">Resume</a>
           </div>
         </div>
       </nav>
+
+      <!-- Main Body -->
 
       <div class="row main-body">
         <div class="icon col-sm-6">
@@ -36,8 +38,8 @@
 
           <div class="home-circles col-sm-12">
             <div class="circle-link projects"><a href="/projects.html">Projects</a></div>
-            <div class="circle-link resume"><a href="/">Resume</a></div>
-            <div class="circle-link contact"><a href="/">Contact me</a></div>
+            <div class="circle-link resume"><a href="/">Work Experience</a></div>
+            <div class="circle-link contact"><a href="/">Skills</a></div>
           </div>
 
           <div class="main-text col-sm-12">
