--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="/projects.html">Projects</a>
-            <a class="nav-item nav-link" href="/">Resume</a>
+            <a class="nav-item nav-link" href="/resume.html">Resume</a>
           </div>
         </div>
       </nav>
