--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
           <div class="home-circles col-sm-12">
             <div class="circle-link projects"><a href="/projects.html">Projects</a></div>
-            <div class="circle-link resume"><a href="/">Work Experience</a></div>
-            <div class="circle-link contact"><a href="/">Skills</a></div>
+            <div class="circle-link resume"><a href="/resume.html">Work Experience</a></div>
+            <div class="circle-link contact"><a href="/resume.html#qualifications">Qualifications</a></div>
           </div>
 
           <div class="main-text col-sm-12">
