--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,9 @@
               </div>
             </div>
 
+
             <div class="cv-section com-sm-12 row">
+              <a name="qualifications"></a>
               <div class="circle col-sm-3"><span> Education and Qualifications </span> </div>
               <div class="col-sm-9">
                 <div>
