Finished resume page

--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,9 @@
               <div class="circle col-sm-3"><span> Personal profile </span> </div>
               <div class="col-sm-9">
                 <div class="top-section final-section">
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> A diligent third year Computer Science undergraduate, looking for summer internships to broaden my horizons in areas of IT and technology. I am hoping to push myself in a challenging environment while building valuable skills.
+                  <p></p> I have developed a wide range of expertise ranging from web development, cloud computing, software deployment, computer vision and machine learning. I employ good team work, an agile mindset, and I am a quick learner with new tools and frameworks. I am particularly interested in the application of Computer Vision and Neural Networks.
+                  </p>
                 </div>
               </div>
             </div>
@@ -51,59 +51,52 @@
                 <div>
                   <h4> Oracle </h4>
                   <h6> June 2017 - Sept 2017 </h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> Worked as an Intern at Oracle Bristol as part of a Continuous Deployment team, creating tools to ease large scale deployment of applications for developers.
+                  </p><p> Developed an improved version of a replication service that ships release artifacts consisting of terabytes of data to Oracle’s global data centers. The project was written in Python; a queue system was implemented using RabbitMQ and the components of the system were run within Dockerised containers. The new project increased the reliability and efficiency of the system, alongside better visibility of how far along the files were.
+                  </p><p> Created demos for the MySQL operator on a Kubernetes cluster, a component that allows easy communication between a application and a containerised MySQL database.</p>
+                  </p>
                 </div>
                 <div>
                   <h4> GWS Media </h4>
                   <h6> Jan 2017 - June 2017 </h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> Worked for GWS Media as a Part Time Assistant Web developer, in which I created user and client friendly websites for businesses in Bristol. Our main tool was Drupal, an open source CMS, that allowed for easy content updates for the clients, as well as a safe and secure way to deploy websites in short deadlines.
+                  </p>
                 </div>
                 <div>
                   <h4> Teaching Assistant </h4>
                   <h6> Sept 2018 - Current</h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> Working as a teaching assistant for the Data structures and algorithms module. I conduct weekly tutorial sessions, helping students understand new topics and answer problem sheet questions. Furthermore, I mark quizzes done throughout the term and help in lab coding sessions, involving implementing algorithms learned in lesson.</p>
                 </div>
                 <div class="final-section">
                   <h4> Senior Resident </h4>
                   <h6> Sept 2018 - Current </h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> Guiding first year students in Churchill Halls, as a live-in peer mentor. My role is to provide advice to students, organise and host events and activities with fellow Senior residents and care for students that are vulnerable and need referring to the Residential Life Team. </p>
                 </div>
               </div>
             </div>
 
 
             <div class="cv-section com-sm-12 row">
-              <a name="qualifications"></a>
+              <a id="qualifications"></a>
               <div class="circle col-sm-3"><span> Education and Qualifications </span> </div>
               <div class="col-sm-9">
                 <div>
                   <h4> MEng - Fourth year</h4>
                   <h6> University of Bristol - Computer Science </h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> <em>Final grade prediction:</em> 2:1
+                  </p><p><em>Degree Topics:</em> Software Engineering, Concurrent Computing, Data Structures and Algorithms, Signals, patterns and Symbols, Machine Learning, Image Processing and Computer Vision, Computational Neuroscience, Web Technologies.</p>
+                  </p>
                 </div>
                 <div>
                   <h4> A-Levels </h4>
                   <h6> Cardiff High School</h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> <em>A level</em> - Maths (A), Further Maths (A), Computing (A)</p>
+                  <p> <em>AS level</em> - Biology (B), Chemistry (B), Psychology (A)</p>
                 </div>
                 <div>
                   <h4> GSCE's </h4>
                   <h6> Cardiff High School</h6>
-                  <p> I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-                  Just click “Edit Text” or double click me and you can start adding your own
-                  content and make changes to the font. </p>
+                  <p> 11 GCSE’s (4 A*, 6 A, 1 B) </p>
                 </div>
               </div>
             </div>
