Most content added

--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,7 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Forest Void  </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>A single player, first-person, VR horror-adventure game, created in Unity over the period of a year. The game utilises the Oculus Rift headset and Touch controllers, alongside a bluetooth heartbeat monitor to create an immersive experience for the player. My role in the team of 6 involved world building and event handling, where I was part of the programming team, coding in C#.</p>
           </div>
         </div>
 
@@ -50,9 +48,8 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Cotswold Water Park  </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>A cross-platform app for Cotswold water park. The main features include an interactive map with routing, events and favourites, and picture uploading using the device camera. The tools used include Angular, Ionic and Phonegap (for cross platform functionality). My role in the team of 6 was to work on map features and events/locations on the map.</p>
+            <p> <a href="http://gavin-parker.github.io/Cotswold-Water-Park/">Click here</a> to download a prototype version for android. </p>
           </div>
         </div>
 
@@ -62,9 +59,7 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Scotland Yard </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>A multiplayer java application based on a board game of the same name. The 5 detectives have to try and catch the AI, Mr X, using various moves and traversing the map. This game helped develop Object oriented programming skills and GUI design skills using the Swing api. </p>
           </div>
         </div>
 
@@ -74,9 +69,7 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Earthly Recipes </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>A recipe website that allows users to create accounts, upload recipes and add them to their favourties. The users can talk to each other using a chat service, and use the search feature to look for recipes. The website was created using Node.js. </p>
           </div>
         </div>
 
@@ -86,9 +79,7 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Graphics Engine - rasteriser </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>In C++ and utilising the SDL library, I created a rasteriser to render a Cornell box. It included homogenous clipping and Blinn-Phong lighting techniques. </p>
           </div>
         </div>
 
@@ -98,9 +89,7 @@
           </div>
           <div class="project-text col-sm-6">
             <h2> Dartboard detector </h2>
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-            Just click “Edit Text” or double click me and you can start adding your own
-            content and make changes to the font.</p>
+            <p>For my image processing and computer vision module, I used opencv to create a dartboard detector that uses the Viola-Jones object-detection framework, trained on sample images of dartboards. It also included other feature selection methods such as looking for certain shapes using Hough transforms. </p>
           </div>
         </div>
 
