--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
               <div class="circle col-sm-3"><span> Personal profile </span> </div>
               <div class="col-sm-9">
                 <div class="top-section final-section">
-                  <p> A diligent third year Computer Science undergraduate, looking for summer internships to broaden my horizons in areas of IT and technology. I am hoping to push myself in a challenging environment while building valuable skills.
+                  <p> A diligent fourth year Computer Science undergraduate, looking for graduate roles to broaden my horizons in areas of IT and technology. I am hoping to push myself in a challenging environment while building valuable skills.
                   <p></p> I have developed a wide range of expertise ranging from web development, cloud computing, software deployment, computer vision and machine learning. I employ good team work, an agile mindset, and I am a quick learner with new tools and frameworks. I am particularly interested in the application of Computer Vision and Neural Networks.
                   </p>
                 </div>
@@ -110,7 +110,7 @@
               <div class="circle"><i class="fas fa-code"></i></div>
               <h5>Programming Languages</h5>
               <ul>
-                <li> C/C++ </li>
+                <li> C/ C++/ C#</li>
                 <li> Javascript, HTML and CSS </li>
                 <li> Java</li>
                 <li> Python </li>
@@ -123,7 +123,7 @@
               <ul>
                 <li> Docker </li>
                 <li> Kubernetes </li>
-                <li> Angular </li>
+                <li> Node </li>
                 <li> Unity </li>
                 <li> Maya </li>
                 <li> OpenCV </li>
