--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
 
           <div class="main-text col-sm-12">
             <p>
-              I'm a paragraph. Click here to add your own text and edit me. It’s easy.
-              Just click “Edit Text” or double click me and you can start adding your own
-              content and make changes to the font. Feel free to drag and drop me anywhere
-              you like on your page. I’m a great place for you to write more. Tell a story
-              and let your users get to know you.
+              My name is Aatina, and I'm a fourth year student looking to apply for graduate roles starting June 2019, after I complete my master's degree. My interests include cloud computing, machine learning and computer vision, but I am open to all disciplines and would like to explore a variety of topics in computer science and industry.
             </p>
           </div>
 
