--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <!-- Main Body -->
 
       <div class="row main-body">
-        <div class="icon col-sm-6">
+        <div class="icon col-xs-12 col-sm-6">
           <img src="icon2.png"/>
         </div>
-        <div class="about-me col-sm-6">
+        <div class="about-me col-xs-12 col-sm-6">
           <h1 class="col-sm-12"> About me </h2>
 
-          <div class="home-circles col-sm-12">
+          <div class="home-circles col-sm-12 row">
             <div class="circle-link projects"><a href="/projects.html">Projects</a></div>
             <div class="circle-link resume"><a href="/resume.html">Work Experience</a></div>
             <div class="circle-link contact"><a href="/resume.html#qualifications">Qualifications</a></div>
@@ -59,15 +59,15 @@
       <div class="container">
         <div class="row">
 
-          <div class="footer-link col-sm-4 row">
-            <div class="call-icon col-sm-6"><i class="icon fas fa-phone"></i></div>
-            <div class="footer-text">
+          <div class="footer-link col-xs-12 col-sm-4 row">
+            <div class="call-icon col-xs-6 col-sm-6"><i class="icon fas fa-phone"></i></div>
+            <div class="footer-text col-xs-6">
               <p>Call</p>
               <span>+447380850666</span>
             </div>
           </div>
 
-          <div class="footer-link col-sm-4 row">
+          <div class="footer-link col-xs-12 col-sm-4 row">
             <div class="email-icon col-sm-6"><i class="icon far fa-envelope"></i></div>
             <div class="footer-text">
               <p>Email</p>
@@ -75,7 +75,7 @@
             </div>
           </div>
 
-          <div class="footer-link col-sm-4 row">
+          <div class="footer-link col-xs-12 col-sm-4 row">
             <div class="follow-icon col-sm-6"><i class="icon fas fa-plus"></i></div>
             <div class="footer-text">
               <p>Follow me</p>
