--- a/projects.html
+++ b/projects.html
@@ -33,20 +33,20 @@
 
         <h1> My projects </h1>
         <div class="project row">
-          <div class="col-sm-6">
-            <iframe class ="project-pic" width="450" height="250" src="https://www.youtube.com/embed/kNekdV2yj9o?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="col-sm-6 col-xs-12">
+            <iframe class ="project-pic" width="450" height="300" src="https://www.youtube.com/embed/kNekdV2yj9o?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-xs-12 col-sm-6">
             <h2> Forest Void  </h2>
             <p>A single player, first-person, VR horror-adventure game, created in Unity over the period of a year. The game utilises the Oculus Rift headset and Touch controllers, alongside a bluetooth heartbeat monitor to create an immersive experience for the player. My role in the team of 6 involved world building and event handling, where I was part of the programming team, coding in C#.</p>
           </div>
         </div>
 
         <div class="project row">
-          <div class="col-sm-6">
-            <iframe class="project-pic" width="450" height="250" src="https://www.youtube.com/embed/hY0L1jHRs_Q?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="col-sm-6 col-xs-12">
+            <iframe class="project-pic" width="450" height="300" src="https://www.youtube.com/embed/hY0L1jHRs_Q?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-sm-6 col-xs-12">
             <h2> Cotswold Water Park  </h2>
             <p>A cross-platform app for Cotswold water park. The main features include an interactive map with routing, events and favourites, and picture uploading using the device camera. The tools used include Angular, Ionic and Phonegap (for cross platform functionality). My role in the team of 6 was to work on map features and events/locations on the map.</p>
             <p> <a href="http://gavin-parker.github.io/Cotswold-Water-Park/">Click here</a> to download a prototype version for android. </p>
@@ -54,40 +54,40 @@
         </div>
 
         <div class="project row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 col-xs-12">
             <img class="project-pic" src="/images/scotland_yard.png"/>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-sm-6 col-xs-12">
             <h2> Scotland Yard </h2>
             <p>A multiplayer java application based on a board game of the same name. The 5 detectives have to try and catch the AI, Mr X, using various moves and traversing the map. This game helped develop Object oriented programming skills and GUI design skills using the Swing api. </p>
           </div>
         </div>
 
         <div class="project row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 col-xs-12">
             <img class="project-pic" src="/images/website.png"/>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-sm-6 col-xs-12">
             <h2> Earthly Recipes </h2>
             <p>A recipe website that allows users to create accounts, upload recipes and add them to their favourties. The users can talk to each other using a chat service, and use the search feature to look for recipes. The website was created using Node.js. </p>
           </div>
         </div>
 
         <div class="project row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 col-xs-12">
             <img class="project-pic" src="/images/rasteriser.png"/>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-sm-6 col-xs-12">
             <h2> Graphics Engine - rasteriser </h2>
             <p>In C++ and utilising the SDL library, I created a rasteriser to render a Cornell box. It included homogenous clipping and Blinn-Phong lighting techniques. </p>
           </div>
         </div>
 
         <div class="project row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 col-xs-12">
             <img class="project-pic" src="/images/dart.jpg"/>
           </div>
-          <div class="project-text col-sm-6">
+          <div class="project-text col-sm-6 col-xs-12">
             <h2> Dartboard detector </h2>
             <p>For my image processing and computer vision module, I used opencv to create a dartboard detector that uses the Viola-Jones object-detection framework, trained on sample images of dartboards. It also included other feature selection methods such as looking for certain shapes using Hough transforms. </p>
           </div>
