--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,16 @@
 
         <div class="project row">
           <div class="col-sm-6 col-xs-12">
+            <img class="project-pic" src="/images/web_page.png"/>
+          </div>
+          <div class="project-text col-sm-6 col-xs-12">
+            <h2> Kiraya </h2>
+            <p>An application to facilitate the communication between a landlord and their respective tenants through an online web-app, eliminating the need for contact using personal methods and giving both parties a tracking mechanism for issues. The app is hosted on the AWS platform and is written in Python using the Django web framework.</p></div>
+            <p><a href="http://cloud-env.jezmxkiyp8.eu-west-2.elasticbeanstalk.com/">Click here </a>to view the website.</p>
+        </div>
+
+        <div class="project row">
+          <div class="col-sm-6 col-xs-12">
             <img class="project-pic" src="/images/scotland_yard.png"/>
           </div>
           <div class="project-text col-sm-6 col-xs-12">
